--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "node scripts/build.js",
-    "deploy": "npm run build && cp build/index.html build/200.html && surge -d jeremyfairbank.com -p build",
+    "prerender": "node scripts/prerender.js",
+    "deploy": "npm run build && npm run prerender && cp build/index.html build/200.html && surge -d jeremyfairbank.com -p build",
     "start": "node scripts/start.js",
     "package": "elm-package",
     "make": "elm-make",
@@ -45,6 +46,7 @@
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.9.3",
+    "webpack-manifest-plugin": "^1.3.2"
   }
 }
